--- a/index.html
+++ b/index.html
@@ -4,20 +4,56 @@
 </head>
 <body>
 <h1>Pathfinder</h1>
-<p>Max flow in random graph with <input id="nodes" type="text" value="10000"/> nodes
-and <input id="neighbors" type="text" value="5"/> outgoing edges per node.</p>
+<p>Compute max transfer in CirclesUBI graph</p>
+<p>Number of edges in the graph: <span id="edgeCount">loading...</span></p>
+<p>
+From: <input id="from" type="text" /><br/>
+To: <input id="to" type="text" /><br/>
+Value: <input id="value" type="text" /> (put 0 to compute max value to transact)
+</p>
 <button id="compute">compute</button>
-<p>Max flow: <span id="flow">?</span></p>
+<p>Value: <span id="flow">?</span></p>
+<p>Steps:</p>
+<div id="steps" />
 <script src="./emscripten_build/pathfinder.js"></script>
 <script type="text/javascript" language="javascript">
+window.onload = function() {
+    var req = new XMLHttpRequest();
+    req.open("GET", "edges.dat", true);
+    req.responseType = "arraybuffer";
+    req.onload = function() {
+        if (req.response) {
+            let edges = new Uint8Array(req.response);
+            var ptr = Module._malloc(edges.length);
+            var heapBytes = new Uint8Array(Module.HEAPU8.buffer, ptr, edges.length);
+            heapBytes.set(new Uint8Array(edges.buffer));
+            let numEdges = Module._loadEdges(heapBytes.byteOffset, edges.length);
+            Module._free(ptr);
+            document.getElementById("edgeCount").innerText = numEdges;
+        }
+    };
+    req.send(null);
+ };
 document.getElementById("compute").onclick = function() {
-    let nodes = document.getElementById("nodes").value - 0;
-    let neighbors = document.getElementById("neighbors").value - 0;
-    document.getElementById("flow").innerText = "computing...";
-    window.setTimeout(function() {
-        f = Module._flow(nodes, neighbors);
-        document.getElementById("flow").innerText = f;
-    }, 10);
+    let from = document.getElementById("from").value;
+    let to = document.getElementById("to").value;
+    let value = document.getElementById("value").value;
+    if (value == 0) {
+        value = "115792089237316195423570985008687907853269984665640564039457584007913129639935";
+    }
+    let parameters = JSON.stringify({"from": from, "to": to, "value": value});
+    var buffer = Module._malloc(parameters.length + 1);
+    Module.stringToUTF8(parameters, buffer, parameters.length + 1);
+    let output = Module.UTF8ToString(Module._flow(buffer));
+    Module._free(buffer);
+    let data = JSON.parse(output);
+    document.getElementById("flow").innerText = data.flow;
+    document.getElementById("steps").innerHTML = '';
+    for (step of data.transfers) {
+        document.getElementById("steps").innerHTML +=
+            'From ' + step.from + " -> " + step.to + " (token: " + step.token + "): "  + step.value + "<br/>";
+        console.log(step);
+    }
 };
 </script>
 </body>
