--- a/index.html
+++ b/index.html
@@ -115,9 +115,22 @@ let fillUsernames = function(addresses) {
 };
 
 let formatValue = function(value) {
-    while (value.length <= 10)
+    while (value.length <= 18)
         value = '0' + value;
-    return value.substr(0, value.length - 10) + '.' + value.substr(value.length - 10, 2);
+    return value.substr(0, value.length - 18) + '.' + value.substr(value.length - 18, 2);
+};
+let unformatValue = function(value) {
+    let dot = value.indexOf('.');
+    let left = value;
+    let right = '';
+    if (dot >= 0) {
+        left = value.substring(0, dot)
+        right = value.substring(dot + 1, 18)
+    }
+
+    while (right.length < 18)
+        right = right + '0'
+    return left + right;
 };
 
 window.onload = function() {
@@ -132,6 +145,8 @@ document.getElementById("compute").onclick = function() {
     let value = document.getElementById("value").value;
     if (value == 0) {
         value = "115792089237316195423570985008687907853269984665640564039457584007913129639935";
+    } else {
+        value = unformatValue(value)
     }
     let parameters = JSON.stringify({"from": from, "to": to, "value": value});
     var buffer = Module._malloc(parameters.length + 1);
@@ -139,7 +154,7 @@ document.getElementById("compute").onclick = function() {
     let output = Module.UTF8ToString(Module._flow(buffer));
     Module._free(buffer);
     let data = JSON.parse(output);
-    document.getElementById("flow").innerText = data.flow;
+    document.getElementById("flow").innerText = formatValue(data.flow);
     document.getElementById("steps").innerHTML = '';
     let addressesToQuery = [];
     for (step of data.transfers) {
