--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ small {
 <h1>Pathfinder</h1>
 <p>Compute multi-hop transfers in the CirclesUBI graph.<br/>
 The computation is done locally, only usernames and avatars are queried from the database.<br/>
-The trust graph is updated at irregular intervals, so the information might be out of date.</p>
+The trust graph is continuously synchronized with the xdai blockchain.</p>
 <p>
 Number of edges in the graph: <span id="edgeCount">loading...</span><br/>
 Latest hub event: <span id="hubEvent">loading...</span><br/>
