--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Latest transfer event: <span id="transferEvent">loading...</span><br/>
 <span class="descriptor">Value:</span><input id="value" type="text" /> (put 0 to compute max value to transact)
 </div>
 </div>
-<button id="compute">compute</button>
+<button id="compute">compute</button><span id="validation"></span>
 <p>Value: <span id="flow">?</span></p>
 <p>Transfers:</p>
 <div><div id="graph" style="width: 100%; height: 300px;"></div></div>
@@ -140,7 +140,31 @@ const tokenAbi = [
     "event Approval(address indexed _owner, address indexed _spender, uint256 _value)"
 ];
 
-const hubContract = new ethers.Contract("0x29b9a7fBb8995b2423a71cC17cf9810798F6C543", hubAbi, provider);
+const hubAddress = "0x29b9a7fBb8995b2423a71cC17cf9810798F6C543";
+const hubContract = new ethers.Contract(hubAddress, hubAbi, provider);
+
+let validateTransfers = async function(transfers) {
+    var token = [];
+    var from = [];
+    var to = [];
+    var value = [];
+    for (step of transfers) {
+        token.push(step.tokenOwner);
+        from.push(step.from);
+        to.push(step.to);
+        value.push(step.value);
+    }
+    var abi = ["function transferThrough(address[],address[],address[],uint256[]) view"];
+    var iface = new ethers.utils.Interface(abi)
+    var calldata = iface.encodeFunctionData('transferThrough', [token, from, to, value]);
+    try {
+        await provider.call({from: from[0], to: hubAddress, data: calldata});
+        document.getElementById("validation").innerText = 'validated';
+    } catch {
+        document.getElementById("validation").innerText = 'invalid';
+    }
+
+};
 
 let uintToAddress = function(value) {
     if (value.length != 66 || value.substr(0, 26) != "0x000000000000000000000000")
@@ -374,6 +398,7 @@ window.onload = async function() {
     setupEventListener();
 };
 document.getElementById("compute").onclick = function() {
+    document.getElementById("validation").innerHTML = '';
     let from = document.getElementById("from").value;
     if (!from.match(/0x[0-9a-fA-F]{40}/)) {
         from = document.querySelector('#fromSuggestion .address').innerText;
@@ -408,6 +433,7 @@ document.getElementById("compute").onclick = function() {
         addressesToQuery = addressesToQuery.concat([step.from, step.to]);
         tokensToQuery.push(step.token)
     }
+    validateTransfers(data.transfers);
     fillUsernames(addressesToQuery, function() {
         drawGraph(data.transfers);
     });
